--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <module>vertx-resteasy-examples-it</module>
         <module>vertx-web-client-examples-it</module>
         <module>vertx-circuit-breaker-examples-it</module>
+        <module>vertx-kafka-examples-it</module>
       </modules>
     </profile>
 
