--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
         <module>vertx-web-client-examples-it</module>
         <module>vertx-circuit-breaker-examples-it</module>
         <module>vertx-kafka-examples-it</module>
+        <module>vertx-grpc-examples-it</module>
       </modules>
     </profile>
 
