--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,8 @@
   <packaging>pom</packaging>
 
   <properties>
-    <vertx.version>3.4.0-SNAPSHOT</vertx.version>
-    <vertx.examples.branch>3.4.0-SNAPSHOT</vertx.examples.branch>
-    <kotlin.version>1.0.6</kotlin.version>
+    <vertx.version>3.4.0</vertx.version>
+    <vertx.examples.branch>3.4.0-staging</vertx.examples.branch>
   </properties>
 
   <profiles>
@@ -117,17 +116,6 @@
         </exclusion>
       </exclusions>
     </dependency>
-    <dependency>
-      <groupId>org.jetbrains.kotlin</groupId>
-      <artifactId>kotlin-stdlib</artifactId>
-      <version>${kotlin.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.jetbrains.kotlin</groupId>
-      <artifactId>kotlin-test</artifactId>
-      <version>${kotlin.version}</version>
-      <scope>test</scope>
-    </dependency>
   </dependencies>
 
   <build>
@@ -140,41 +128,20 @@
           <target>1.8</target>
         </configuration>
       </plugin>
-      <plugin>
-        <groupId>org.jetbrains.kotlin</groupId>
-        <artifactId>kotlin-maven-plugin</artifactId>
-        <version>${kotlin.version}</version>
-        <executions>
-          <execution>
-            <id>compile</id>
-            <phase>compile</phase>
-            <goals>
-              <goal>compile</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>test-compile</id>
-            <phase>test-compile</phase>
-            <goals>
-              <goal>test-compile</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
     </plugins>
   </build>
 
   <repositories>
-    <!--<repository>-->
-      <!--<id>oss.snapshots</id>-->
-      <!--<url>https://oss.sonatype.org/content/repositories/snapshots</url>-->
-      <!--<snapshots>-->
-        <!--<enabled>true</enabled>-->
-      <!--</snapshots>-->
-      <!--<releases>-->
-        <!--<enabled>false</enabled>-->
-      <!--</releases>-->
-    <!--</repository>-->
+    <repository>
+      <id>staging</id>
+      <url>https://oss.sonatype.org/content/repositories/iovertx-3665</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+    </repository>
     <repository>
       <id>oss.snapshots</id>
       <url>https://oss.sonatype.org/content/repositories/snapshots</url>
