hopefully this version is the right one

--- a/vertx-ignite-examples-it/pom.xml
+++ b/vertx-ignite-examples-it/pom.xml
@@ -15,7 +15,7 @@
   <properties>
     <example.dir>ignite-examples</example.dir>
     <fastbuild>false</fastbuild>
-    <jar.version>${project.version}</jar.version>
+    <jar.version>3.4.0</jar.version>
   </properties>
 
   <build>
