--- a/vertx-grpc-examples-it/src/it/grpc-examples/build.gradle
+++ b/vertx-grpc-examples-it/src/it/grpc-examples/build.gradle
@@ -22,10 +22,10 @@ repositories {
 
 // Feel free to delete the comment at the next line. It is just for safely
 // updating the version in our release process.
-def grpcVersion = '1.1.1-SNAPSHOT' // CURRENT_GRPC_VERSION
+def grpcVersion = '1.1.2' // CURRENT_GRPC_VERSION
 
 dependencies {
-  compile "io.vertx:vertx-grpc:3.4.0-SNAPSHOT"
+  compile "io.vertx:vertx-grpc:3.4.1"
 }
 
 protobuf {
