--- a/vertx-web-examples-it/src/it/web-examples/pom.xml
+++ b/vertx-web-examples-it/src/it/web-examples/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>io.vertx</groupId>
   <artifactId>web-examples</artifactId>
-  <version>3.4.0-SNAPSHOT</version>
+  <version>3.4.1</version>
 
   <dependencies>
 
