--- a/vertx-grpc-examples-it/pom.xml
+++ b/vertx-grpc-examples-it/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>io.vertx</groupId>
         <artifactId>integration-tests</artifactId>
-        <version>3.4.1</version>
+        <version>3.4.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>vertx-grpc-examples-it</artifactId>
@@ -22,7 +22,7 @@
             <plugin>
                 <groupId>io.vertx</groupId>
                 <artifactId>vertx-integration-test-maven-plugin</artifactId>
-                <version>3.4.1</version>
+                <version>3.4.2-SNAPSHOT</version>
                 <executions>
                     <execution>
                         <id>clone-vertx-examples</id>
