--- a/vertx-integration-test-maven-plugin/pom.xml
+++ b/vertx-integration-test-maven-plugin/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>io.vertx</groupId>
     <artifactId>integration-tests</artifactId>
-    <version>3.4.1</version>
+    <version>3.4.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>vertx-integration-test-maven-plugin</artifactId>
