--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
 
   <groupId>io.vertx</groupId>
   <artifactId>integration-tests</artifactId>
-  <version>3.4.2-SNAPSHOT</version>
+  <version>3.5.0-SNAPSHOT</version>
 
   <packaging>pom</packaging>
 
   <properties>
-    <vertx.version>3.4.2</vertx.version>
-    <vertx.examples.branch>3.4.2-staging</vertx.examples.branch>
+    <vertx.version>3.5.0-SNAPSHOT</vertx.version>
+    <vertx.examples.branch>3.5.0.beta1</vertx.examples.branch>
   </properties>
 
   <profiles>
