--- a/vertx-spring-examples-it/pom.xml
+++ b/vertx-spring-examples-it/pom.xml
@@ -14,7 +14,7 @@
 
   <properties>
     <fastbuild>false</fastbuild>
-    <jar.version>3.4.2</jar.version>
+    <jar.version>${project.version}</jar.version>
   </properties>
 
   <build>
