--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
 
   <groupId>io.vertx</groupId>
   <artifactId>integration-tests</artifactId>
-  <version>3.5.0-SNAPSHOT</version>
+  <version>3.5.0.Beta1</version>
 
   <packaging>pom</packaging>
 
   <properties>
-    <vertx.version>3.5.0-SNAPSHOT</vertx.version>
+    <vertx.version>3.5.0.Beta1</vertx.version>
     <vertx.examples.branch>3.5.0.beta1</vertx.examples.branch>
   </properties>
 
@@ -134,7 +134,7 @@
   <repositories>
     <repository>
       <id>staging</id>
-      <url>https://oss.sonatype.org/content/repositories/iovertx-3684</url>
+      <url>https://oss.sonatype.org/content/repositories/iovertx-3687</url>
       <snapshots>
         <enabled>false</enabled>
       </snapshots>
