--- a/vertx-core-examples-it/pom.xml
+++ b/vertx-core-examples-it/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>io.vertx</groupId>
     <artifactId>integration-tests</artifactId>
-    <version>3.5.0-SNAPSHOT</version>
+    <version>3.5.0.Beta1</version>
   </parent>
 
   <artifactId>vertx-core-examples-it</artifactId>
