--- a/vertx-spring-examples-it/pom.xml
+++ b/vertx-spring-examples-it/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>io.vertx</groupId>
     <artifactId>integration-tests</artifactId>
-    <version>3.5.0.Beta1</version>
+    <version>3.5.0</version>
   </parent>
 
   <artifactId>vertx-spring-examples-it</artifactId>
@@ -22,7 +22,7 @@
       <plugin>
         <groupId>io.vertx</groupId>
         <artifactId>vertx-integration-test-maven-plugin</artifactId>
-        <version>3.5.0.Beta1</version>
+        <version>3.5.0</version>
         <executions>
           <execution>
             <id>clone-vertx-examples</id>
